<resources>
    <string name="app_name">CookBook Family</string>
    <string name="acra_toast_text">Application plantée ! \n Rapport envoyé </string>
    <!-- Splash -->
    <string name="P0BP">Ouvrir mon livre</string>
    <string name="P0BM"> Nouveau membre de la famille</string>
    <string name="P0BF"> Nouveau livre de famille</string>
    <string name="P0LF">Famille :</string>
    <string name="P0LM">Prénom :</string>
    <string name="P0LP">Mot de passe :</string>
    <string name="P0HF">Lefevre avenue Mouchez</string>
    <string name="P0HM">Emilie</string>
    <string name="P0NUP">Une nouvelle version est disponible sur playstore</string>
    <string name="P0HP">pas123niAZER</string>
    <string name="P0ER_nocon"> Serveur familycookbook non disponible </string>
    <string name="P0ERUF"> Caractères speciaux autorisés _-?!() et espace. Min %1$s et max %2$s caractères. Par exemple Martin de Saint-Germain. </string>
    <string name="P0ERF_notnew"> Ce nom de famille existe déjà. Ajoutez une rue, une ville ou un chiffre </string>
    <string name="P0RUM"> Caractères speciaux autorisés _- et pas d\'espace. Min %1$s et max %2$s caractères. </string>
    <string name="P0ERM_nofam"> Il n\'y a pas de livre à ce nom. (Il est indiqué en sous-titre dans le menu du livre) </string>
    <string name="P0ERF_nomem"> Il n\'y a pas ce prénom dans la famille. Vérifiez son orthographe. </string>
    <string name="P0ERM_notnew"> Il y a déjà un membre de la famille qui porte ce nom.  </string>
    <string name="P0RUP"> Caractères speciaux autorisés _-?!() et pas d\'espace. Min %1$s et max %2$s caractères. </string>
    <string name="P0ER_com"> Echec des échanges avec le serveur family cookbook </string>
    <string name="P0ERM_new"> Echec dans la creation du livre CookBook Family </string>
    <string name="P0ERP_wrong"> Mot de passe incorrect </string>
    <string name="P0_moto">Family CookBook </string>
    <string name="P0OKF"> Nom de famille trouvé. </string>
    <string name="P0OKP"> Ouvrons ce livre de cuisine, %1$s !  </string>
    <string name="P0OK_done"> Votre nouveau livre de cuisine est ouvert !  </string>
    <string name="P0OKM"> Bienvenue dans votre nouveau livre de cuisine ! </string>
    <string name="P0COT"> Confirmation </string>
    <string name="P0COF"> Creation de la famille %1$s </string>
    <string name="P0COM"> Creation d\'un nouveau membre de la famille %1$s </string>
    <!-- List -->
    <string name="P1ITTL">Nom de la recette</string>
    <string name="P1ITSRCL">Source ou auteur</string>
    <string name="P1ITNL">Note</string>
    <string name="P1MU_new">Nouvelle recette</string>
    <string name="P1IT_dif">Difficulty </string>
    <string name="P1IT_type">Type </string>
    <string name="P1MU_search"> Recherche </string>
    <string name="P1MU_clear"> Vider champs </string>
    <string name="P1MU_out"> Sortie </string>
    <string name="P1MU_sync"> Synchronisation avec serveur  </string>
    <string name="P1MU_raz"> Annulation filtre</string>
    <string name="P1MU_receive"> Messagerie  </string>
    <string name="P1MU_fb"> Feedback sur l\'appli </string>
    <string name="P1MU_com"> Communauté </string>
    <string name="P1R_ing"> Ingrédients : </string>
    <string name="P1R_step"> Etapes : </string>
    <string name="P1_de"> de %1$s </string>
    <string name="P1_sync"> Synchronisé</string>
    <!-- Display -->
    <string name="P2MU_report">Partager la recette</string>
    <string name="P2MU_edit">Editer la recette</string>
    <string name="P2MU_send">Envoyer une recette à vos amis</string>
    <string name="P2MU_html">Visualiser sur navigateur</string>
    <string name="P2U_txt">%1$s@%2$s</string>
    <string name="P2RE_title">==%1$s ==</string>
    <string name="P2RE_user">de %1$s </string>
    <string name="P2RE_url"> Lien : %1$s </string>
    <string name="P2RE_src"> Source : %1$s </string>
    <string name="P2RE_ing">- %1$s</string>
    <string name="P2RE_step">-Etape %1$s : %2$s</string>
    <string name="P2RE_end">Téléchargez CookBookFamily </string>
    <string name="P2IT"> Ingredients pour %1$s personnes </string>
    <string name="P2RT"> Sources </string>
    <string name="P2ST">Etapes</string>
    <string name="P2CT">Commentaires (%1$s)</string>
    <string name="P2I_txt"> - Plus de sel ! de Arthur @ Family Malin</string>
    <string name="P2C_hint"> Votre commentaire ...</string>
    <!-- Edit -->
    <string name="P3TL">Nom de la recette</string>
    <string name="P3TH">Merveilleux couscous à l\indienne</string>
    <string name="P3SRCL">Source de la recette (texte)</string>
    <string name="P3SRCH">Oui Chef de Lignac page 118</string>
    <string name="P3SRCURLL">Lien vers la recette (url)</string>
    <string name="P3SRCURLH">http://...</string>
    <string name="P3NBL">Nombre de personne (max 12) </string>
    <string name="P3NBH">4</string>
    <string name="P3LIT">Liste des ingrédients (max 15)</string>
    <string name="P3IT"> 1 cuil. à soupe de sirop </string>
    <string name="P3LST">Descriptions des étapes (max 9)</string>
    <string name="P3NIH"> </string>
    <string name="P3S1H"> Decrire l\'etape de la recette </string>
    <string name="P3NSH"> </string>
    <string name="P3MU_del">Effacer la recette</string>
    <string name="P3MU_done">Fait</string>
    <!--Dialog -->
    <string name="DS_invit">Avez-vous aimé cette recette ?</string>
    <string name="DS_done">Fait !</string>
    <string name="DS_title">Note</string>
    <!--messagerie -->
    <string name="P4MU_send"> Envoyer par messagerie</string>
    <string name="P4_start"> Envoi de la recette en cours ...</string>
    <string name="P4_OK"> Recette envoyée à %1$s@%2$s </string>
    <string name="P4_fail"> Echec de l\'envoi de recette </string>
    <string name="P4M_err"> Erreur dans le nombre ou le genre de caractères </string>
    <string name="P4M_mes"> Votre message au destinataire </string>
    <string name="P4M_title"> Destinataire de la recette </string>
    <string name="P4M0"> Pas de message ! Appuyez sur retour.</string>
    <string name="P4MES_IN"> Vous avez reçu une recette de %1$s </string>
    <string name="P4MES_OUT"> %1$s vous demande la recette  </string>
    <!--ListMask -->
    <string name="TSON">Sélection des recettes pour l\'été</string>
    <string name="TSOFF">Sélection été annulée</string>
    <string name="TWON">Sélection des recettes pour l\'hiver</string>
    <string name="TWOFF">Sélection hiver annulé</string>
    <string name="TDON">Sélection des recettes par difficulté</string>
    <string name="TDOFF">Sélection par difficulté annulé</string>
    <string name="TTON">Sélection des recettes par type</string>
    <string name="TTOFF">Sélection par type annulé</string>
    <string name="TTION">Classement alphabetique</string>
    <string name="TTIOFF">Classement par date</string>
    <string name="TRON">Sélection des recettes de %1$s</string>
    <string name="TROFF">Sélection des recettes de %1$s annulé</string>
    <string name="TSEON">Recettes selon recherche</string>
    <string name="TSEOFF">Annulation recherche</string>
    <string name="TNON">Tri par notes</string>
    <string name="TNOFF">Tri par notes annulé</string>
    <string name="TEY"> Pas de recettes à afficher. Voir le menu pour annuler les filtres</string>
    <string name="TEZ"> Livre de recette vide. Créer une recette en cliquant sur +.</string>
    <string name="TEW"> Livre de recette vide mais vous avez un message !</string>
    <!--Community -->
    <string name="P5T"> Titre de la recette</string>
    <string name="P5N"> prenom</string>
    <string name="P5F"> \@nom de famille </string>
    <string name="P5OP"> Classé par popularité</string>
    <string name="P5OR"> Classé par date</string>
    <string name="P5ON"> Classé par note</string>
    <string name="P5OSA"> Toutes les recettes </string>
    <string name="P5OSC"> Votre cercle proche </string>
    <string name="P5OSF"> Votre cercle large </string>
    <string name="P5MES"> Votre demande de recette a été acceptée </string>
    <string name="P5MESNO"> Votre demande de recette a été refusée </string>
    <string name="P5DTT">Votre demande </string>
    <string name="P5DT"> La recette : %1$s </string>
    <string name="P5DN"> A : %1$s </string>
    <string name="P5DM"> Votre message </string>
    <string name="P5DMErr"> Erreur dans votre message </string>
    <string name="P5DMOk"> Demande envoyée </string>
    <string-array name="recipe_season_array">
        <item>Hiver</item>
        <item>Ete</item>
        <item>Toute l\'année</item>
    </string-array>
    <string-array name="recipe_difficulty_array">
        <item>Vite fait</item>
        <item>Facile</item>
        <item>Elaboré</item>
        <item>Sophistiqué</item>
        <item>Non défini </item>
    </string-array>
    <string-array name="recipe_type_array">
        <item>Aperitif</item>
        <item>Entrée</item>
        <item>Plat</item>
        <item>Dessert</item>
        <item>Accompagn.</item>
        <item>Autre</item>
    </string-array>
</resources>
