<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myToolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance">

    <item android:id="@+id/menu_item_search"
        android:title="@string/P1MU_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_item_clear"
        android:title="@string/P1MU_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/new_mail"
        android:icon="@drawable/ic_message"
        android:title="@string/P1MU_receive"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/new_recipe"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/P1MU_new"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/list_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/P1MU_out"
        app:showAsAction="never|withText"/>
    <item
        android:id="@+id/list_sync"
        android:icon="@drawable/ic_logout"
        android:title="@string/P1MU_sync"
        app:showAsAction="never|withText"/>

    <item
        android:id="@+id/list_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/P1MU_raz"
        app:showAsAction="never|withText"/>

    <item
        android:id="@+id/feedback"
        android:title="@string/P1MU_fb"
        app:showAsAction="never|withText"/>

</menu>