<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/recipe_mail"
        android:icon="@drawable/ic_mailsend"
        android:title="@string/P4MU_send"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/recipe_menu_report"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/P2MU_report"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/recipe_menu_delete"
        android:icon="@drawable/ic_recipe_delete"
        android:title="@string/P3MU_del"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/recipe_menu_edit"
        android:icon="@drawable/ic_recipe_edit"
        android:title="@string/P2MU_edit"
        app:showAsAction="ifRoom|withText"/>

</menu>